# VibeSafe

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
frontend/: backend_test.py  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js  robots.js  sitemap.js
frontend/app/scan/: page.js
frontend/components/vibesafe/: AntiGravityBackground.jsx  Architecture.jsx  Comparison.jsx  CrisisMarquee.jsx  EarthNetwork.jsx  EcosystemFlowchart.jsx  FAQ.jsx  FinalCTA.jsx  FindingCard.jsx  FindingItem.jsx  Footer.jsx  GithubAction.jsx  Hero.jsx  HowItWorks.jsx  LiveDemo.jsx  Nav.jsx  Pricing.jsx  PurpleOrb.jsx  RealityCheck.jsx  (+12 more)
frontend/lib/: mockReport.js  mongo.js  rateLimit.js  reportAdapter.js  scanStore.js  turnstile.js
migrations/: env.py
migrations/versions/: a433f3a7ad37_initial_schema.py  a8fbb027b070_sync_models.py  c6f3e6d4b2c1_add_evidence_verdict_fields.py  d4a7c1b9e2f0_add_repo_context_to_scans.py  e1b2c3d4f5a6_add_remediation_fields.py
tests/: conftest.py  test_benchmarks.py  test_day1.py  test_day2.py  test_engine.py  test_evidence.py  test_node_support.py  test_repo_context.py  test_report.py  test_scan_upload_cleanup.py  test_scanner_quality_regressions.py
tests/fixtures/: package.json  supabase_migration.sql  vuln_auth.py  vuln_cors.py  vuln_secrets.py  vuln_sql.py
vibesafe/api/: config.py  db.py  main.py  models.py
vibesafe/scanner/: engine.py  evidence.py  findings.py  ingest.py  remediation.py  repo_context.py  report.py  verdicts.py
(+24 files in other folders)
