[tool.poetry]
name = "vibesafe"
version = "1.0.0"
description = "AI-powered security scanner for vibe-coded apps"
authors = ["VibeSafe Team"]
readme = "README.md"
packages = [{include = "vibesafe"}]
 
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = {extras = ["asyncio"], version = "^5.2.0"}
httpx = "^0.28.0"
gitpython = "^3.1.43"
detect-secrets = "^1.5.0"
groq = "^0.28.0"
openai = "^1.57.0"
google-generativeai = "^0.8.3"
weasyprint = "^62.3"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"
psycopg2-binary = "^2.9.12"
 
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.1"
ruff = "^0.8.0"
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"